# market-analysis

./: .gitignore  DATA_SUMMARY.md  README.md  SETUP_AND_RUN.md  app.py  app_backtesting.py  app_with_tabs.py  enhance_backtest_display.py  fix_backtest_issues.py  pyproject.toml  run.py  test_tabs.py
data/options/: options_data_^SPX_20250908_calls_20250906_105344.csv  options_data_^SPX_20250908_calls_20250906_125453.csv  options_data_^SPX_20250908_puts_20250906_105344.csv  options_data_^SPX_20250908_puts_20250906_125453.csv  options_data_^SPX_20250909_calls_20250906_105344.csv  options_data_^SPX_20250909_calls_20250906_125453.csv  options_data_^SPX_20250909_puts_20250906_105344.csv  options_data_^SPX_20250909_puts_20250906_125453.csv  options_data_^SPX_20250910_calls_20250906_105344.csv  options_data_^SPX_20250910_calls_20250906_125453.csv  options_data_^SPX_20250910_puts_20250906_105344.csv  options_data_^SPX_20250910_puts_20250906_125453.csv  options_data_^SPX_20250911_calls_20250906_105344.csv  options_data_^SPX_20250911_calls_20250906_125453.csv  options_data_^SPX_20250911_puts_20250906_105344.csv  options_data_^SPX_20250911_puts_20250906_125453.csv  options_data_^SPX_20250912_calls_20250906_105344.csv  options_data_^SPX_20250912_calls_20250906_125453.csv  options_data_^SPX_20250912_puts_20250906_105344.csv  options_data_^SPX_20250912_puts_20250906_125453.csv  options_data_^SPX_20250915_calls_20250906_105344.csv  (+171 more)
data_fetcher/: README.md  README_SYNTHETIC.md  test_simple.py  test_spx.py  test_spx_fixed.py  test_synthetic.py
data_fetcher/src/: data_fetcher.py  (+1 more)
(+3 files in other folders)
